# oop

./: .flake8  README.md  main.py  pyproject.toml  test.py
src/: category.py  product.py
tests/: test_category.py  test_product.py
